--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
             <button type="submit">Login</button>
         </form>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
